--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,354 @@
 */
 
 .page {
-  min-inline-size: 320px;
-  min-block-size: 100dvb;
+	color: var(--accent-color);
+	font-family: var(--main-font, Arial, sans-serif);
+	font-size: var(--main-font-size);
+	background-color: var(--bg-color);
+	background-image: var(--bg-image);
+	background-size: cover;
+	min-inline-size: 320px;
+	min-block-size: 100dvb;
+	font-variation-settings: "wght" var(--card-text-weight);
+}
+
+/*-------------------------HEADER-----------------------*/
+.header {
+	display: flex;
+	flex-direction: column;
+	gap: 25px;
+	border: 2px solid #000;
+	padding: clamp(7.5rem, 6.3462rem + 4.9231vw, 8.5rem) 0 25px 0;
+	font-family: var(--accent-font);
+	font-weight: var(--card-text-weight);
+	line-height: 1;
+	background-color: inherit;
+}
+
+.header__container {
+	max-width: var(--container-width);
+	margin: 100px auto;
+}
+
+.header__name {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
+}
+
+.header__logo {
+	font-size: var(--logo-font-size);
+}
+
+.header__title {
+	font-size: var(--title-font-size);
+	text-transform: uppercase;
+}
+
+.header__theme-menu {
+	width: 104px;
+	margin: 0 auto;
+}
+
+.theme-menu__list {
+	display: flex;
+	flex-direction: column;
+	gap: 14px;
+	font-size: 14px;
+}
+
+.theme-menu__button {
+	position: relative;
+	margin-inline-start: calc(1em + 6px);
+	text-transform: uppercase;
+	transition: color 0.3s ease;
+}
+
+.theme-menu__button:hover {
+	color: var(--accent-color-hover);
+}
+
+.theme-menu__button:focus {
+	outline: none;
+	color: var(--accent-color-hover);
+}
+
+.theme-menu__button:disabled {
+	color: var(--accent-color-hover);
+	pointer-events: none;
+}
+
+.theme-menu__button::after {
+	content: '';
+	position: absolute;
+	bottom: -1px;
+	left: 0;
+	width: 100%;
+	border-bottom: 2px solid var(--accent-color-hover);
+	transition: scale 0.3s ease;
+	transform-origin: left;
+	scale: 0;
+}
+
+.theme-menu__button:focus-visible:after {
+	transform-origin: left;
+	scale: 1;
+}
+
+.theme-menu__button:disabled::before {
+	content: '▶';
+	position: absolute;
+	top: 0;
+	left: calc(-1 * (1em + 6px));
+	color: var(--accent-color-hover);
+}
+
+/*------------------------------MAIN-----------------------------------*/
+.main {
+	background-color: inherit;
+}
+
+.main__container {
+	max-width: var(--container-width);
+	margin: 0 auto;
+}
+
+.card {
+	margin-block-end: 50px;
+	border: 2px solid var(--accent-color);
+}
+
+.card__title {
+	border-bottom: 2px solid var(--accent-color);
+	padding: 5px 10px;
+	font-size: inherit;
+	line-height: 1.21;
+	font-variation-settings: "wght" var(--card-title-weight);
+}
+
+.card__image {
+	position: relative;
+	max-inline-size: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem);
+	aspect-ratio: 1/1;
+}
+
+.card__label {
+	position: absolute;
+	top: 25px;
+	right: clamp(0.8125rem, -0.0529rem + 3.6923vw, 1.5625rem);
+	z-index: 1;
+	color: currentColor;
+	font-family: var(--accent-font);
+	font-size: var(--label-font-size);
+	line-height: 1;
+	text-shadow: 1px 1px var(--label-stroke-color);
+	mix-blend-mode: hard-light;
+}
+
+@supports(-webkit-text-stroke: 1px var(--label-stroke-color)) {
+	.card__label {
+		text-shadow: none;
+		-webkit-text-stroke: 1px var(--label-stroke-color);
+	}
+}
+
+.image {
+	object-fit: cover;
+	object-position: center;
+	inline-size: 100%;
+	aspect-ratio: 1/1;
+}
+
+.card__text {
+	border-top: 2px solid var(--accent-color);
+	padding: 25px;
+	line-height: 1.167;
+}
+
+.buttons {
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	gap: 5px;
+	margin: 0 25px 25px 0;
+}
+
+.card__icon-button {
+	height: 38px;
+	outline: 2px solid transparent;
+	transition: 0.3s ease;
+}
+
+.button {
+	position: relative;
+	z-index: 0;
+	border: 2px solid var(--accent-color);
+
+	overflow: hidden;
+	font-family: var(--accent-font);
+	font-size: var(--button-font-size);
+	line-height: 0.9;
+	text-align: center;
+	background-color: var(--bg-color);
+	transition: border 0.3s ease, box-shadow 0.3s ease;
+}
+
+.button::before {
+	content: '';
+	position: absolute;
+	inset: 0;
+	background-color: var(--accent-color);
+	transition: transform 0.5s ease-in-out, color 0.5s ease-in-out;
+	transform: translate(-100%, 0%);
+}
+
+.button:hover::before {
+	transform: translate(0%, 0%);
+}
+
+.button:focus {
+	outline: none;
+}
+
+.button:focus-visible {
+	box-shadow: 2px 2px 0px 0px var(--accent-color);
+}
+
+.card__icon-button:focus {
+	outline: none;
+}
+
+.card__icon-button:focus-visible {
+	border: 2px solid var(--accent-color);
+}
+
+.card__like-button {
+	min-width: 130px;
+	min-height: 38px;
+}
+
+.button__text {
+	position: relative;
+	z-index: 1;
+	color: var(--button-text-color);
+	mix-blend-mode: difference;
+}
+
+/*-----------------------FOOTER---------------------------*/
+.footer {
+	display: flex;
+	justify-content: center;
+}
+
+.footer__container {
+	max-width: var(--container-width);
+	margin: 0 auto;
+}
+
+.footer__button {
+	display: flex;
+	align-items: center;
+	gap: 8px;
+	min-height: 55px;
+	margin-block-end: 103px;
+	padding: 0 20px;
+}
+
+.floppy-icon {
+	position: relative;
+	z-index: 1;
+	color: var(--button-text-color);
+	inline-size: 21px;
+	block-size: 21px;
+	mix-blend-mode: difference;
+}
+
+/*----------------ДИАЛОГОВОЕ ОКНО-----------------------------*/
+.dialog:is([open]) {
+	display: grid;
+	grid-template-columns: min-content 1fr;
+	align-items: center;
+	row-gap: 30px;
+	column-gap: 20px;
+	border: 2px solid var(--accent-color);
+	padding: 30px;
+	background-color: var(--bg-color);
+	max-inline-size: var(--dialog-width);
+}
+
+.dialog::backdrop {
+	background-color: var(--dialog-bg-color);
+}
+
+.dialog__button {
+	grid-column: span 2;
+	min-height: 38px;
+}
+
+.dialog__text {
+	color: var(--accent-color);
+	font-family: var(--accent-font);
+	font-size: var(--button-font-size);
+	line-height: 1.5;
+	text-transform: uppercase;
+}
+
+.dialog__floppy-icon {
+	color: var(--accent-color);
+	block-size: 39px;
+	inline-size: 39px;
+}
+
+/*-----------------МЕДИАЗАПРОСЫ-----------------------*/
+@media (width < 376px) {
+	.card__text_padding {
+		padding: 0 4px 0 0;
+	}
+
+	.footer__button {
+		flex-direction: column;
+		gap: 8px;
+		margin-block-end: 100px;
+		padding: 15px 20px;
+	}
+
+	.floppy-icon {
+		block-size: 28px;
+		inline-size: 28px;
+	}
+
+	.dialog:is([open]) {
+		padding: 30px 42px;
+	}
+}
+
+/*------------------Фильтры для картинок---------------------*/
+.image_filter-grayscale {
+	filter: grayscale(0.8);
+}
+
+.image_filter-blur {
+	filter: blur(2px);
+}
+
+.image_filter-contrast {
+	filter: contrast(80%);
+}
+
+.image_filter-hue-rotate {
+	filter: hue-rotate(0.5turn);
+}
+
+.image_filter-invert {
+	filter: invert(75%);
+}
+
+.image_filter-opacity {
+	filter: opacity(40%);
+}
+
+.image_filter-several {
+	filter: brightness(200%) saturate(60%) hue-rotate(90deg);
 }
