--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,28 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+	--main-font: Inter-Variable;
+	--main-font-size: 18px;
+	--accent-font: PressStart2P;
+	--card-text-weight: 400;
+	--card-title-weight: 700;
+	--bg-color: #FFFFFF;
+	--accent-color: #000000;
+	--accent-color-hover: rgb(0 0 0 / 0.6);
+	--bg-image: repeating-linear-gradient(to right, #d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
+	repeating-linear-gradient(#d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
+	repeating-linear-gradient(#e7e7e7 0.01%, #1a1a1a);
+	--container-width: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem); 
+	--logo-font-size: clamp(3.0625rem, 1.9087rem + 4.9231vw, 4.0625rem);
+	--title-font-size: clamp(0.875rem, 0.226rem + 2.7692vw, 1.4375rem);
+	--button-font-size: 14px;
+	--label-font-size: 14px;
+	--label-stroke-color: rgb(255 255 255 / 0.5);
+	--button-text-color: #FFFFFF;
+	--heart-contour-color: black;
+	--heart-sparks-color: #FF0000;
+	--heart-core-color: white;
+	--heart-main-body-color: #FF0000;
+	--heart-main-color: #FF0000;
+	--dialog-bg-color: rgb(0 0 0 / .75);
+	--dialog-width: clamp(21.3125rem, 20.4471rem + 3.6923vw, 22.0625rem);
+}
