--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,9 +8,7 @@
 	--bg-color: #FFFFFF;
 	--accent-color: #000000;
 	--accent-color-hover: rgb(0 0 0 / 0.6);
-	--bg-image: repeating-linear-gradient(to right, #d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
-	repeating-linear-gradient(#d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
-	repeating-linear-gradient(#e7e7e7 0.01%, #1a1a1a);
+	--bg-image: repeating-linear-gradient(to right, #d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px), repeating-linear-gradient(#d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px), repeating-linear-gradient(#e7e7e7 0.01%, #1a1a1a);
 	--container-width: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem); 
 	--logo-font-size: clamp(3.0625rem, 1.9087rem + 4.9231vw, 4.0625rem);
 	--title-font-size: clamp(0.875rem, 0.226rem + 2.7692vw, 1.4375rem);
