--- a/styles/style.css
+++ b/styles/style.css
@@ -245,7 +245,7 @@
 	mix-blend-mode: difference;
 }
 
-/*-----------------------FOOTER---------------------------*/
+/*---------------------------FOOTER---------------------------*/
 .footer {
 	display: flex;
 	justify-content: center;
@@ -269,7 +269,7 @@
 	mix-blend-mode: difference;
 }
 
-/*----------------ДИАЛОГОВОЕ ОКНО-----------------------------*/
+/*-------------------ДИАЛОГОВОЕ ОКНО-----------------------------*/
 .dialog:is([open]) {
 	display: grid;
 	grid-template-columns: min-content 1fr;
@@ -305,7 +305,7 @@
 	inline-size: 39px;
 }
 
-/*-----------------МЕДИАЗАПРОСЫ-----------------------*/
+/*-------------------МЕДИАЗАПРОСЫ--------------------------*/
 @media (width < 376px) {
 	.card__text_padding {
 		padding: 0 4px 0 0;
